@@ -1,5 +1,9 @@
 2025-07-14  Zhengyi Fu  <i@fuzy.me>
 
+	* site-lisp/gptel-cmds.el: Remove file.
+
+2025-07-14  Zhengyi Fu  <i@fuzy.me>
+
 	* site-lisp/gptel-config.el ("Moonshot"): Add definition for
 	Moonshot backend.
 
